# organizadorDownloads

./: README.md  pyproject.toml
src/organizador/: config.py  funcoes.py  logger.py  main.py  monitor.py  organizador.py
src/organizadorDownloads.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
